@@ -2,23 +2,26 @@ package org.cryptomator.cryptofs.migration.v6;
 
 import com.google.common.jimfs.Configuration;
 import com.google.common.jimfs.Jimfs;
-import org.cryptomator.cryptofs.common.MasterkeyBackupHelper;
 import org.cryptomator.cryptofs.common.Constants;
+import org.cryptomator.cryptofs.common.MasterkeyBackupHelper;
 import org.cryptomator.cryptofs.migration.api.Migrator;
 import org.cryptomator.cryptofs.mocks.NullSecureRandom;
-import org.cryptomator.cryptolib.Cryptors;
-import org.cryptomator.cryptolib.api.Cryptor;
-import org.cryptomator.cryptolib.api.CryptorProvider;
-import org.cryptomator.cryptolib.api.KeyFile;
+import org.cryptomator.cryptolib.api.CryptoException;
+import org.cryptomator.cryptolib.api.Masterkey;
+import org.cryptomator.cryptolib.common.MasterkeyFileAccess;
+import org.hamcrest.CoreMatchers;
+import org.hamcrest.MatcherAssert;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.SecureRandom;
 import java.text.Normalizer;
 import java.text.Normalizer.Form;
 
@@ -27,11 +30,10 @@ public class Version6MigratorTest {
 	private FileSystem fs;
 	private Path pathToVault;
 	private Path masterkeyFile;
-	private CryptorProvider cryptorProvider;
+	private SecureRandom csprng = NullSecureRandom.INSTANCE;
 
 	@BeforeEach
 	public void setup() throws IOException {
-		cryptorProvider = Cryptors.version1(NullSecureRandom.INSTANCE);
 		fs = Jimfs.newFileSystem(Configuration.unix());
 		pathToVault = fs.getPath("/vaultDir");
 		masterkeyFile = pathToVault.resolve("masterkey.cryptomator");
@@ -45,28 +47,33 @@ public class Version6MigratorTest {
 	}
 
 	@Test
-	public void testMigrate() throws IOException {
+	public void testMigrate() throws IOException, CryptoException {
 		String oldPassword = Normalizer.normalize("ä", Form.NFD);
 		String newPassword = Normalizer.normalize("ä", Form.NFC);
 		Assertions.assertNotEquals(oldPassword, newPassword);
 
-		KeyFile beforeMigration = cryptorProvider.createNew().writeKeysToMasterkeyFile(oldPassword, 5);
-		Assertions.assertEquals(5, beforeMigration.getVersion());
-		Files.write(masterkeyFile, beforeMigration.serialize());
-		Path masterkeyBackupFile = pathToVault.resolve("masterkey.cryptomator" + MasterkeyBackupHelper.generateFileIdSuffix(beforeMigration.serialize()) + Constants.MASTERKEY_BACKUP_SUFFIX);
+		Masterkey masterkey = Masterkey.generate(csprng);
+		MasterkeyFileAccess masterkeyFileAccess = new MasterkeyFileAccess(new byte[0], csprng);
+		masterkeyFileAccess.persist(masterkey, masterkeyFile, oldPassword, 5);
+		byte[] beforeMigration = Files.readAllBytes(masterkeyFile);
 
-		Migrator migrator = new Version6Migrator(cryptorProvider);
-		migrator.migrate(pathToVault, "masterkey.cryptomator", oldPassword);
+		Files.write(masterkeyFile, beforeMigration);
+		Path masterkeyBackupFile = pathToVault.resolve("masterkey.cryptomator" + MasterkeyBackupHelper.generateFileIdSuffix(beforeMigration) + Constants.MASTERKEY_BACKUP_SUFFIX);
 
-		KeyFile afterMigration = KeyFile.parse(Files.readAllBytes(masterkeyFile));
-		Assertions.assertEquals(6, afterMigration.getVersion());
-		try (Cryptor cryptor = cryptorProvider.createFromKeyFile(afterMigration, newPassword, 6)) {
-			Assertions.assertNotNull(cryptor);
+		Migrator migrator = new Version6Migrator(csprng);
+		migrator.migrate(pathToVault, null, "masterkey.cryptomator", oldPassword);
+
+		byte[] afterMigration = Files.readAllBytes(masterkeyFile);
+		String afterMigrationJson = new String(afterMigration, StandardCharsets.UTF_8);
+		MatcherAssert.assertThat(afterMigrationJson, CoreMatchers.containsString("\"version\": 6"));
+
+		try (var key = masterkeyFileAccess.load(masterkeyFile, newPassword)) {
+			Assertions.assertNotNull(key);
 		}
 
 		Assertions.assertTrue(Files.exists(masterkeyBackupFile));
-		KeyFile backupKey = KeyFile.parse(Files.readAllBytes(masterkeyBackupFile));
-		Assertions.assertEquals(5, backupKey.getVersion());
+		String backedUpJson = Files.readString(masterkeyBackupFile, StandardCharsets.UTF_8);
+		MatcherAssert.assertThat(backedUpJson, CoreMatchers.containsString("\"version\": 5"));
 	}
 
 }
